--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -489,6 +489,10 @@
     background-color: #f8f8f8;
     display: flex;
 }
+.header_navbar-search-empty{
+    height: 50px;
+    width: 20px;
+}
 
 .header_navbar-input{
     height: 50px;
@@ -500,9 +504,9 @@
     outline: none;
 }
 
-.header_navbar-input::placeholder{
+/* .header_navbar-input::placeholder{
     padding-left: 16px;
-}
+} */
 
 .header_navbar-search-icon-box{
     height: 50px;
@@ -817,7 +821,7 @@
     margin: auto;
     width: 62%;
     padding-top: 30%;
-    background: url(/assets/img/img_video.png) top center / cover no-repeat;
+    background: url(../img/img_video.png) top center / cover no-repeat;
 }
 
 .container_video-play-yt{
@@ -884,7 +888,7 @@
 }
 
 .body_picture{
-    background: url(/assets/img/body1.jpg) top center / cover no-repeat;
+    background: url(../img/body1.jpg) top center / cover no-repeat;
     padding-top: 50%;
 }
 
