--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,8 @@
 
 .header_nav-logo{
     margin: auto;
+    display: flex;
+    flex: 1;
 }
 
 .header_nav-img{
@@ -80,6 +82,7 @@
 .header_nav-icon{
     width: 100%;
     display: flex;
+    flex: 1;
 }
 
 .header_nav-icon-link{
