--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@
     width: 100%;
     display: flex;
     margin: 0 38px 0 0;
-    /* justify-content: space-between; */
+    justify-content: center;
 }
 
 .header_nav-item{
