--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -575,15 +575,11 @@
 
 .slider_img{
     width: 100%;
-    /* padding-top: 31.13%; */
+    padding-top: 31.13%;
     cursor: pointer;
-    /* background: url(../img/slider-img-1.jpg) top center / cover no-repeat; */
-    /* transform: scale(1);
-    transition: 0.2s ease-in-out; */
-}
-.slider_picture-img{
-    width: 100%;
-    height: 400px;
+    background: url(../img/slider-img-1.jpg) top center / cover no-repeat;
+    transform: scale(1);
+    transition: 0.2s ease-in-out;
 }
 
 .slider_picture{
@@ -594,7 +590,7 @@
 }
 
 .slider_picture:hover .slider_img{
-    /* transform: scale(1.05); */
+    transform: scale(1.05);
 }
 
 .slider_app{
